--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,9 @@
 #activeCases{
     font-size: 7rem;
 }
+.container-of-container{
+    height: 100vh;
+}
 
 #administered{
     font-size: 5rem;
@@ -20,21 +23,36 @@ span{
     font-size: 3rem;
 }
 body{
-    background: #1f1f1f !important;
+    background: #101010 !important;
 }
 
-.container{
-    height: 100vh;
+.second-section{
+    background:linear-gradient(rgb(0 0 0 / 90%),rgb(0 0 0 / 90%),rgb(0 0 0 / 90%)),url('https://images.unsplash.com/photo-1612278247079-6a0af8ff2dee?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80');
+    background-position: center center;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
-
 #confirmed{
     color: yellow;
 }
-
+.fa-question-circle{
+    position: absolute;
+    top:0;
+    right: 0;
+    padding:1%;
+}
 #recovered{
     color: rgb(170, 255, 0);
 }
 
 #deaths{
     color: tomato;
+}
+
+#infoLabel{
+    color: #101010;
+}
+
+.modal-body{
+    color: black;
 }
